--- a/europe/styles.css
+++ b/europe/styles.css
@@ -6,6 +6,51 @@
   margin: 0px;
 }
 
+/* Layout styles */
+.header {
+  margin: 20px;
+  text-align: center;
+}
+.blurb {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.countries {
+  padding: 20px;
+}
+.main-content {
+  padding: 20px;
+  grid-column: span 2;
+}
+/* content formatting */
+.content-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 20px;
+  margin: 20px;
+}
+.card {
+  border: 1px solid rgb(255, 255, 255);
+  overflow: hidden;
+  border-radius: 20px;
+}
+.card img {
+  max-width: 100%;
+  height: auto;
+}
+.card p {
+  /* margin: top right bottom left */
+  margin: 10px 10px 10px 10px;
+}
+.card h2 {
+  margin: 10px 0 5px 10px;
+}
 body {
   background-color: rgb(12, 34, 56);
   color: rgb(255, 255, 255);
@@ -15,15 +60,16 @@ body {
 /* Set new font */
 @font-face {
   /* Here, font-family means the name I am going to use for this font */
-  font-family: Signature;
-  src: url("fonts/Aline Signature Woff.ttf");
+  font-family: Photoshoot;
+  src: url("fonts/Photoshoot.ttf");
 }
 
 /* Format main headings */
 h1 {
   color: rgb(255, 255, 0);
-  font-family: Signature;
+  font-family: Photoshoot;
   margin-bottom: 20px;
+  margin-top: 30px;
 }
 /* Format h2 heading */
 h2 {
@@ -48,4 +94,16 @@ a {
 a:hover {
   text-decoration: underline;
   color: rgb(158, 248, 255);
+}
+@media only screen and (max-width: 950px) {
+	.container {
+    grid-template-columns: 1fr;
+    grid-column-gap: 0px;
+  }
+  .countries {
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+  }
 }
